pageStyle/history.css
.page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 18px;
    word-break: keep-all;
    white-space: nowrap;

    & > h1 {
        font-size: 32px;
        font-weight: var(--font-bold);
        text-align: center;
    }

    .summary {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        width: 100%;

        font-size: 16px;
        span {
            font-weight: var(--font-medium);
        }
    }

    button.delete {
        background-color: var(--overwhelmingly-negative);
        color: var(--overwhelmingly-negative-foreground);
        font-size: 16px;
        padding: 0.4em 0.8em;
        svg {
            width: 1.2em;
            height: 1.2em;
        }
    }

    .game-container {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 8px;

        .history-item {
            width: 100%;
            height: 360px;
            display: flex;
            flex-direction: column;
            justify-content: flex-start;
            align-items: center;
            @media (min-width: 600px) {
                height: 200px;
                flex-direction: row;
                justify-content: flex-start;
                align-items: center;
            }
            gap: 16px;
            padding: 20px;
            border-radius: 8px;
            background-color: var(--light-background-alt);
            color: var(--light-foreground-alt);

            transition: var(--page-component-starting-transition);
            --index: 0;
            transition-delay: calc(var(--index) * 100ms);

            @starting-style {
                transform: translateY(100%) scaleX(1.2) scaleY(1.1);
                opacity: 0;
            }

            .thumbnail {
                width: 100%;
                height: 30%;
                flex-shrink: 0;
                border-radius: 8px;
                overflow: hidden;

                @media (min-width: 600px) {
                    width: 30%;
                    height: 100%;
                }

                img {
                    width: 100%;
                    height: 100%;
                    object-fit: cover;
                }
            }

            .data {
                flex-grow: 1;
                width: 100%;
                display: flex;
                flex-direction: column;
                justify-content: space-between;
                align-items: flex-start;
                gap: 16px;

                .genres {
                    font-size: 12px;
                    font-weight: var(--font-light);
                    opacity: 1;
                    overflow: hidden;
                    display: -webkit-box;
                    -webkit-box-orient: vertical;
                    -webkit-line-clamp: 1;
                }

                .title {
                    font-size: 20px;
                    font-weight: var(--font-medium);
                    overflow: hidden;
                    display: -webkit-box;
                    -webkit-box-orient: vertical;
                    -webkit-line-clamp: 1;
                }
            }

            .foot {
                width: 100%;
                display: flex;
                flex-direction: column;
                justify-content: flex-start;
                align-items: flex-start;
                gap: 20px;

                @media (min-width: 800px) {
                    flex-direction: row;
                    justify-content: space-between;
                    align-items: flex-end;
                }
            }

            .metadata {
                display: flex;
                flex-direction: column;
                justify-content: flex-start;
                align-items: flex-start;
                gap: 4px;
                font-size: 12px;

                @media (min-width: 600px) {
                    font-size: 16px;
                    flex-direction: row;
                    justify-content: flex-start;
                    align-items: flex-end;
                    gap: 16px;
                }
            }

            .ext-links {
                display: flex;
                flex-direction: row;
                justify-content: center;
                align-items: center;
                gap: 8px;
                width: fit-content;

                a {
                    display: flex;
                    flex-direction: row;
                    gap: 2px;
                    justify-content: center;
                    align-items: center;
                    color: #46A0D4;
                    text-decoration: underline;
                    transition: filter 100ms ease-out;
                    cursor: pointer;
                    font-weight: var(--font-bold);
                    font-size: 12px;

                    &:hover {
                        filter: brightness(0.9);
                    }

                    & svg {
                        width: 12px;
                        height: 12px;
                    }
                }
            }
        }
    }
}

